--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prisma": "^5.9.1"
+    "prisma": "^5.10.2"
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
@@ -28,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.0",
     "uuid4": "^2.0.3"
   }
 }
