--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "prisma": "^5.10.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.525.0",
+    "@aws-sdk/lib-storage": "^3.525.1",
     "@prisma/client": "^5.9.1",
+    "aws-sdk": "^2.1569.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.1.0",
     "uuid4": "^2.0.3"
   }
