--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^5.9.1",
     "aws-sdk": "^2.1569.0",
     "bcrypt": "^5.1.1",
+    "busboy": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
