--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "uuid4": "^2.0.3"
   }
 }
