--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "prisma migrate deploy && node server.js",
     "dev": "nodemon server.js",
     "seed": "prisma db seed",
+    "migrate": "prisma migrate deploy",
     "postinstall": "prisma generate"
   },
   "prisma": {
