--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-xlsx": "^0.24.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "read-excel-file": "^5.8.1",
     "uuid4": "^2.0.3"
   },
-
   "_moduleAliases": {
     "@controller": "./controllers",
     "@prisma": "./prisma.js"
